# ws2815_Led_Controller

./: .gitignore  CMakeLists.txt  colorTable.c  colorTable.h  crc16.c  crc16.h  keyboard.c  keyboard.h  leds.c  leds.h  main.c  settings.c  settings.h
assets/: fire.txt  spetraclResponseLEDs.txt
cmake/: toolchain.cmake
tools/: genColorTable.py
